--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
     <encoding>UTF-8</encoding>
     <scala.tools.version>2.10</scala.tools.version>
     <scala.version>2.10.5</scala.version>
-	<spark.version>1.6.2</spark.version>
-    <hadoop.version>2.3.0-cdh5.0.2</hadoop.version>
+	<spark.version>1.6.0-cdh5.7.2</spark.version>
+    <hadoop.version>2.6.0-cdh5.7.2</hadoop.version>
   </properties>
 
   <repositories>
@@ -148,6 +148,21 @@
             <include>**/*Suite.*</include>
           </includes>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptor>src/main/assembly/assembly.xml</descriptor>
+        </configuration>
+        <executions>
+          <execution>
+          <id>make-assembly</id>
+          <phase>package</phase>
+          <goals>
+            <goal>single</goal>
+          </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
